--- a/index.html
+++ b/index.html
@@ -122,6 +122,25 @@
                   <div class="alert alert-danger" style="display: none;"></div>
                </div>
                <!-- end column -->
+               <!--Concatenate starts here-->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>concatenating</b> - Concatenate Strings with Plus
+                     Operator, and += Operator
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
             </div>
          </div>
       </div>
